Fixed alignment for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,57 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
-main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
 footer {
   width: 100%;
   height: 100px;
@@ -61,27 +20,7 @@ footer {
   justify-content: center;
   align-items: center;
 }
-footer img {
-  margin-left: 0.5rem;
-}
-footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
+
 .title {
   margin: 0;
   line-height: 1.15;
@@ -106,29 +45,25 @@ a {
 
 .wall-selector {
   display: flex;
-  gap: 12px;
-  height: 20rem;
-}
-
-code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-}
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  gap: 1rem;
+  justify-content: center;
 }
 
-.grid > * {
-  padding-bottom: 2rem;
+.wall-selector > img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 10px;
+  object-fit: contain;
+  max-height: 15rem;
+}
+
+.combineButton {
+  font-size: 2rem;
+}
+
+.uploadButton {
+  font-size: 1rem;
 }
 
 .image:hover {
@@ -154,23 +89,4 @@ code {
 
 button.card:hover:enabled {
   cursor: pointer;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-.logo {
-  height: 1em;
-}
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
